--- a/vue/vue.css
+++ b/vue/vue.css
@@ -1,4 +1,42 @@
-.class1{
+/* .class1{
     background: #444;
     color: #eee;
+}
+
+.fade-enter{
+	transform: translateX(10rem);
+}
+.fade-enter-active, .fade-leave-active {
+  transition: all 2s;
+}
+.fade-leave-to{
+	transform: translateX(10rem);
+	
+}
+.fade-enter-to{
+	transform: rotate(180deg);
+}
+.fade-leave{
+	transform: rotate(-180deg);
+}
+ */
+.bounce-enter-active {
+  animation: bounce-in .5s;
+}
+.bounce-leave-active {
+  animation: bounce-in .5s reverse;
+}
+@keyframes bounce-in {
+  0% {
+    transform: scale(0);
+	/* transform: rotateX(180deg); */
+  }
+  50% {
+    transform: scale(1.5);
+	transform: rotateY(180deg);
+  }
+  100% {
+    transform: scale(1);
+	/* transform: rotateZ(180deg); */
+  }
 }
